# dotfiles

./: .bashrc  .gitignore  .inputrc  .profile  .xsession  README.md
.config/: Xmodmap
.config/clangd/: config.yaml
.config/dunst/: dunstrc
.config/gdb/: gdbinit
.config/git/: config  gitk
.config/gtk-3.0/: settings.ini
.config/i3/: clamp  config
.config/picom/: picom.conf
.config/polybar/: config  config.ini  launch_polybar.sh
.config/polybar/scripts/: base.sh  cpupower.sh  playerctl.sh  powerprofiles.sh  pulsemute.sh  screensaver.sh  tuned.sh
.config/qt5ct/: qt5ct.conf
.config/qt5ct/colors/: arc-dark-micrac.conf  test.conf
.config/qt6ct/: qt6ct.conf
.config/screenlayout/: external.sh  triple.sh  triple_old.sh
.config/tmux/: tmux.conf
.config/touchegg/: touchegg.conf
.config/vivaldi_custom/: custom.css
.config/wezterm/: wezterm.lua
.config/wezterm/colors/: micrac.toml
.config/xresources/: Xresources  st.Xresources  test  weeb.Xresources  xterm.Xresources
.dfs/: homepage.html  init.sh  pacman_packages.txt
.dfs/scripts/: dfs_application_setup.sh  dfs_first_setup.sh  dfs_system_update.sh
.dfs/session/: keyboard.sh  locker.sh  tablet.sh  touchpad.sh
.vim/: lsp_highlight.vim  markdown.css  vimrc
.vim/after/ftplugin/: markdown.vim
.vim/after/syntax/: markdown.vim
.vim/colors/: micrac.vim
.vim/pack/synced/opt/dbrowser/: Session.vim
.vim/pack/synced/opt/dbrowser/autoload/: dbrowser.vim
.vim/pack/synced/opt/dbrowser/ftplugin/: dbrowser.vim
.vim/pack/synced/opt/dbrowser/plugin/: dbrowser.vim
.vim/pack/synced/opt/dbrowser/syntax/: dbrowser.vim
.vim/pack/synced/start/csfix/plugin/: csfix.vim
.vim/snippets/: cpp.json  java.json
.vim/syntax/: markdown.vim
Templates/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
